# wp-common

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: generate_public_assets.yaml  release.yaml  update-pull-request.yml
assets/: icon_design_06_2023.ai
assets/styles/: styles.csv
public/: icon_mapping.json  styles.json  styles_wq.json
scripts/: generate_icon_atlas_and_mapping.py  generate_styles.py
