[tool.poetry]
name = "wp-common"
version = "0.1.0"
description = ""
authors = ["Naveen Anil <naveen.anil@wind-pioneers.com>"]
readme = "README.md"
packages = [{include = "wp_common"}]

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^10.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
